<resources>
    <string name="app_name">NetHunter</string>
    <string name="app_nav_home_label">NetHunter</string>
    <string name="hometitle">Kali Linux NetHunter</string>
    <string name="nethunter_label">Nethunter Panel Home</string>
    <string name="nethunter_description">Welcome to Kali Linux NetHunter by Offensive Security! This application is designed to make it easier to execute attacks and control services. The navigation menu contains links to useful commands, settings, macros, and attack configuration pages. Most configurations work out of the box but some may require some minimal tweaking.</string>
    <string name="nethunter_current_interfaces">Network Interfaces</string>
    <string name="nethunter_external_ip">External IP</string>
    <string name="nethunter_hid_detect">HID Interfaces</string>
    <string name="kali_services_label">Kali Service Control</string>
    <string name="kali_services_description">Various Kali network services can be started and stopped via the buttons in this part of the interface.</string>
    <string name="hid_label">HID Keyboard Attack</string>
    <string name="hid_powersploit_description">The Powersploit payload provides you a choice of reverse meterpreter HTTP/S payloads. "URL to payload" should be a URL accessible to the victim machine where the larger payload is downloaded to.</string>
    <string name="hid_windows_cmd_description">This Windows CMD payload allows you to enter raw commands to a Windows command prompt. Hitting the list menu will allow you to choose keyboard layout or UAC bypass options. </string>
    <string name="hid_admin_select">Please select</string>
    <string-array name="hid_admin_options">
        <item>win7</item>
        <item>win8</item>
    </string-array>
    <string name="badusb_label">BadUSB MITM Attack</string>
    <string name="badusb_description">This is our implementation of the BadUSB attack as demonstrated at Black Hat USA 2014. Enabling this USB mode will turn your device with its OTG USB cable into a network interface when plugged into a target computer. Connecting the USB cable to a PC will force all traffic from that PC (Windows or Linux) through the NetHunter device, where the traffic can be MITM\'ed.</string>
    <string name="mana_label">MANA Evil Access Point</string>
    <string name="mana_headline">Evil Access Point</string>
    <string name="mana_description">This is the configuration page for MANA, an evil access point implementation by Sensepost. The various MITM logs get written to the /var/lib/mana-toolkit directory in the Kali chroot..</string>
    <string name="mana_hostapd">The hostapd configuration file used by Mana.</string>
    <string name="mana_hostapd_wpe">The hostapd configuration file used for 802.1x/EAP authentication attack (hostapd-wpe)  This is not used with MANA.</string>
    <string name="mana_hostapd_wpe_certs">Generate certificates (1st time only)</string>
    <string name="mana_dhcpd">The dhcpd configuration file used by Mana.</string>
    <string name="mana_dnsspoof">The dnsspoof configuration file used by Mana.</string>
    <string name="mana_nat_full">The Mana script that does full NAT &amp; SSL interception.</string>
    <string name="mana_nat_simple">The Mana script that does full NAT only.</string>
    <string name="mana_nat_simple_bdf">The Mana script that does full NAT &amp; BDFProxy HTTP routing to port 8080.</string>
    <string name="bdfproxy_cfg">The configuration file for BDFProxy.</string>
    <string name="mana_noupstream">The Mana no-upstream run script.</string>
    <string name="mana_noupstream_eap">The Mana no-upstream EAP run script.</string>
    <string name="mana_bettercap_description">Route traffic to bettercap proxy with Mana-toolkit</string>
    <string name="hostapd_label">Hostapd Service</string>
    <string name="hostapd_headline">Hostapd Config</string>
    <string name="hostapd_description">hostapd is a user space daemon for wireless access point and authentication servers. You can use hostapd to easily create a wireless access point using these configuration options:</string>
    <string name="hostapd_private_key">Private Key Password</string>
    <string name="duckhunter_label">HID Ducky Script Attacks</string>
    <string name="select_language">Language</string>
    <string name="duckConvertAttack">Attack</string>
    <string name="duck_hunter_headline">The DuckHunter script can easily convert "USB Rubber Ducky" scripts into NetHunter HID format.  You can generate preconfigured scripts at the incredibly useful <a href="http://www.ducktoolkit.com/Home.jsp">Ducky Toolkit</a> site, or check out the Rubber Ducky script syntax from the official <a href="https://github.com/hak5darren/USB-Rubber-Ducky/wiki/Duckyscript">README</a></string>
    <string-array name="duckhunter_preset_array">
        <item>Select preset</item>
        <item>Hello World</item>
        <item>OSX Perl Reverse Shell</item>
        <item>OSX Ruby Reverse Shell</item>
    </string-array>
    <string name="payload_select">Please select</string>
    <string-array name="payloads">
        <item>windows/meterpreter/reverse_http</item>
        <item>windows/meterpreter/reverse_https</item>
    </string-array>
    <string name="source">Edit source</string>
    <string name="start_service">Start hostapd</string>
    <string name="stop_service">Stop hostapd</string>
    <string name="start_mitmf">Start MITMf attack</string>
    <string name="stop_mitmf">Stop MITMf attack</string>
    <string name="start_badusb">Start BadUSB attack</string>
    <string name="stop_badusb">Stop BadUSB attack</string>
    <string name="KaliLauncherLabel">Kali Launcher</string>
    <string name="launch_kali_menu">Launch Kali Menu in Terminal</string>
    <string name="launch_kali_shell">Launch Kali Shell in Terminal</string>
    <string name="launch_wifite">Launch Wifite</string>
    <string name="kill_kali">Shutdown Kali</string>
    <string name="update_kali_chroot">Update Kali chroot</string>
    <string name="turn_off_external_wifi">Turn Off External Wifi</string>
    <string name="shutdown_kali">Unmount Kali</string>
    <string name="kali_dumpmifare">Dump Mifare</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="close_app">Close Application</string>
    <string name="update">Update</string>
    <string name="load">Load from SDCARD</string>
    <string name="save">Save to SDCARD</string>
    <string name="execute">Execute</string>
    <string name="execute_attack">Execute Attack</string>
    <string name="stop_mana">Stop mana</string>
    <string name="start_mana">Start mana</string>
    <string name="ip_address">IP address</string>
    <string name="bssid">BSSID</string>
    <string name="ssid">SSID</string>
    <string name="chanel">Channel</string>
    <string name="enable_karma">Enable karma</string>
    <string name="admin">UAC Bypass</string>
    <string name="choose_language">Keyboard Layout</string>
    <string name="reset_usb">Reset USB</string>
    <string name="none">None</string>
    <string name="win7">Windows7</string>
    <string name="win8">Windows8</string>
    <string name="loading">Loading</string>
    <string name="iface">Interface</string>
    <string name="port">Port</string>
    <string name="address">Address</string>
    <string name="ulr">URL:</string>
    <string name="payload">Payload</string>
    <string name="dhcp_options">dhcp options</string>
    <string name="loading_service">Loading service state</string>
    <string name="get_external_ip">Get external IP</string>
    <string name="karma_loud">karma loud</string>
    <string name="dhcp_range">dhcp range</string>
    <string name="ps_ip_address">IP Address (LHOST)</string>
    <string name="ps_port">Port (LPORT)</string>
    <string name="ps_payload_url">URL to payload</string>
    <string name="toast_install_terminal">Error launching intent. Install Android Terminal!</string>
    <string name="descriptiontext" />
    <string name="macchanger_description">Change the MAC of any network interface.\n\nIt can be randomly generated or manually typed. \n\nThe MAC must contain 6 pair of combinations using the charset: [0–9|a-f] something like:\n\n 00:11:22:ab:cd:ef </string>
    <string name="interface_select">Pick an interface:</string>
    <string name="macchanger_select">Select macchanger mode:</string>
    <string name="macchanger_label">Macchanger</string>
    <string name="saved_mac">Load MAC</string>
    <string name="load_saved_mac">Load saved MAC</string>
    <string name="save_mac">Save current MAC</string>
    <string name="reset_mac">Reset wlan0 MAC address</string>
    <string name="wlan0ResetInfo">This will reset the wlan0 MAC to his original state.\n\nAfter the reset the phone will be rebooted.\n\n This is useful if the wifi is stuck with a incompatible MAC address.</string>
    <string name="wlanNote">The wlan0 interface does not support every combination of MAC addresses, so this feature is disabled for wlan0.\n\nIf your wifi gets stuck, reset the MAC with the menu option.</string>
    <string name="mitmf_description">Written by @byt3bl33d3r, MITMf aims to provide a one-stop-shop for Man-In-The-Middle and network attacks while updating and improving existing attacks and techniques.</string>
    <string name="mitmf_javascriptkeylogger">JavaScript Keylogger</string>
    <string name="mitmf_browserprofiler">Browser Profiler</string>
    <string name="mitmf_filepwn">FilePWN (BDFPROXY) </string>
    <string name="mitmf_beefautorun">BeEEF Autorun</string>
    <string name="mitmf_smbauth">SMB challenge-response auth attempts</string>
    <string name="mitmf_sslstripplus">SSLStrip+</string>
    <string name="mitmf_appcache">App Cache Poison</string>
    <string name="mitmf_upsidedown">Enable Upsidedowninternet</string>
    <string name="mitmf_FERRETNG">Enable Ferret-NG Cookie Capture Plugin</string>
    <string name="mitmf_Responder_Description">Responder allows you to poison LLMNR, NBT-NS and MDNS requests</string>
    <string name="mitmf_Responder">Enable Responder Plugin</string>
    <string name="mitmf_Responder_Analyze">Enable Analyze</string>
    <string name="mitmf_Responder_Wredir">Enable Wredir</string>
    <string name="mitmf_Responder_NBTNS">Enable NBTNS</string>
    <string name="mitmf_Responder_Fingerprint">Fingerprint Host</string>
    <string name="mitmf_Responder_LM">Force LM hash downgrade</string>
    <string name="mitmf_Responder_WPAD">WPAD Rogue Proxy Server</string>
    <string name="mitmf_screenshotter">Enable ScreenShotter Plugin</string>
    <string name="mitmf_screenshotter_interval">Interval (in seconds) to screenshot:</string>
    <string name="drawertitlenethunter">Home</string>
    <string name="drawertitlecreatechroot">Kali Chroot Manager</string>
    <string name="drawertitlekalilauncher">Kali Launcher</string>
    <string name="drawertitlekaliservices">Kali Services</string>
    <string name="drawertitlehid">HID Attacks</string>
    <string name="drawertitleduckhunter">DuckHunter HID</string>
    <string name="drawertitlebadusb">Bad USB MITM Attack</string>
    <string name="drawertitlemana">Mana Wireless Toolkit</string>
    <string name="drawertitlemacchanger">MAC Changer</string>
    <string name="pineapple_description">The pineapple connector is used in conjunction with the Hak5 Pineapple Nano and a USB OTG cable.   This helper will connect the Pineapple Nano over ethernet and upstream your wifi connection.</string>
    <string name="pineapple_gateway">Pineapple Gateway/Web Interface IP</string>
    <string name="pineapple_port">Pineapple Nano Web Port</string>
    <string name="pineapple_ip">Client IP</string>
    <string name="pineapple_cidr">Pineapple CIDR</string>
    <string name="pineapple_start_OTG">Setup Connection</string>
    <string name="pineapple_stop_OTG">Close Connection</string>
</resources>