<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Button
        android:id="@+id/button_start_kali"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/launch_kali_shell"
        android:textColor="#ffffffff" />

    <Button
        android:id="@+id/button_start_kalimenu"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/launch_kali_menu"
        android:textColor="#ffffffff" />

    <Button
        android:id="@+id/button_launch_wifite"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/launch_wifite"
        android:clickable="true"
        android:textColor="#ffffffff" />
	<Button
        android:id="@+id/update_kali_chroot"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_kali_chroot"
        android:clickable="true"
        android:textColor="#ffffffff" />
	<Button
        android:id="@+id/turn_off_external_wifi"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/turn_off_external_wifi"
        android:clickable="true"
        android:textColor="#ffffffff" />      
	
</LinearLayout>