<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="417dp"
            android:layout_height="wrap_content"
            android:text="@string/mitmf_description"
            android:layout_gravity="center_horizontal|center"
            android:gravity="center"
            android:padding="4dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="455dp"
            android:layout_gravity="center_horizontal">

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/mitmf_interface"
                android:spinnerMode="dropdown" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="General Settings"
                android:id="@+id/textView17" />

            <ImageView
                android:paddingTop="10px"
                android:paddingBottom="5px"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@android:drawable/divider_horizontal_bright"
                android:id="@+id/imageView" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mitmf_javascriptkeylogger"
                android:id="@+id/mitmf_jskey" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mitmf_FERRETNG"
                android:id="@+id/checkBox"
                android:checked="false" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mitmf_browserprofiler"
                android:id="@+id/mitmf_browserprofile" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mitmf_filepwn"
                android:id="@+id/mitmf_filepwn" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mitmf_beefautorun"
                android:id="@+id/mitmf_beef" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mitmf_smbauth"
                android:id="@+id/mitmf_smb" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mitmf_sslstripplus"
                android:id="@+id/mitmf_sslstrip" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mitmf_appcache"
                android:id="@+id/mitmf_app_poison" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mitmf_upsidedown"
                android:id="@+id/mitmf_upsidedown" />

            <ImageView
                android:layout_gravity="center_horizontal"
                android:paddingTop="10px"
                android:paddingBottom="5px"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:src="@android:drawable/divider_horizontal_bright" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="ScreenShotter"
                android:id="@+id/textView11" />

            <ImageView
                android:paddingTop="10px"
                android:paddingBottom="5px"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@android:drawable/divider_horizontal_bright"
                android:id="@+id/imageView2" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mitmf_screenshotter"
                android:id="@+id/mitmf_screenshotter"
                android:checked="false" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mitmf_screenshotter_interval"
                    android:id="@+id/mitmf_screenhot_int_enable" />

                <EditText
                    android:layout_width="91dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/mitmf_screen_interval"
                    android:maxLines="1" />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</ScrollView>