<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pineapple_description"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="4dp"
        android:id="@+id/textView33"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/pineapple_gateway"
        android:id="@+id/textView31" />

    <EditText
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/pineapple_gatewayip"
        android:text="172.16.42.1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/pineapple_port"
        android:id="@+id/textView30" />

    <EditText
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/pineapple_webport"
        android:text="1471"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/pineapple_ip"
        android:id="@+id/textView29" />

    <EditText
        android:layout_width="177dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/pineapple_clientip"
        android:text="172.16.42.42/24" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/pineapple_cidr"
        android:id="@+id/textView32" />

    <EditText
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/pineapple_cidr"
        android:text="172.16.42.0/24" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pineapple_start_OTG"
            android:id="@+id/pineapple_start_button" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pineapple_stop_OTG"
            android:id="@+id/pineapple_close_button" />
    </LinearLayout>

</LinearLayout>