<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/badusb_label"
            android:textSize="28sp"
            android:padding="4dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_gravity="center_horizontal|center" 
            android:gravity="center"
            android:text="@string/badusb_description" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/iface"
            android:padding="4dp" />

        <EditText
            android:id="@+id/ifc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"/>

        <Button
            android:id="@+id/updateOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="updateOptions"
            android:text="@string/update" />

    </LinearLayout>
</ScrollView>