<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        android:focusable="true"
  		android:focusableInTouchMode="true" 
  		>
        
        <TextView
            android:id="@+id/reference_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/duck_hunter_headline"
            android:layout_gravity="center_horizontal|center" 
            android:gravity="center"
            android:padding="4dp" />
        <EditText
            android:id="@+id/editSource"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:includeFontPadding="false"
            android:inputType="textMultiLine"
            android:layout_marginLeft="1dip"
            android:layout_marginRight="1dip" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/load"
                android:id="@+id/duckyLoad" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:id="@+id/duckySave" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>